# deeplearn24-NLPRenaissanceChallenge

./: .gitignore  LICENSE  README.md  compose.yml  pyproject.toml
data/0_input/: data_splits.json
data/0_input/dataset_words/: dictionary.json
data/0_input/handout-created/: outputs.csv  outputsTest.csv  train.csv  valid.csv
data/0_input/handout-created/BoundBoxApplied/: res_image_1.txt  res_image_10.txt  res_image_11.txt  res_image_12.txt  res_image_13.txt  res_image_14.txt  res_image_15.txt  res_image_16.txt  res_image_17.txt  res_image_18.txt  res_image_19.txt  res_image_2.txt  res_image_20.txt  res_image_21.txt  res_image_22.txt  res_image_23.txt  res_image_24.txt  res_image_25.txt  res_image_26.txt  res_image_27.txt  res_image_28.txt  res_image_29.txt  res_image_3.txt  res_image_30.txt  res_image_31.txt  (+6 more)
data/0_input/handout-modified/: handout.csv  test.csv  train.csv  val.csv
data/0_input/sbwce-corpus/: dictionary.json
data/2_bounding_box/Doc-UFCN_processed/: metadata.csv
data/4_inference/keras/: handout.csv
data/4_inference/tesseract/: spa.csv  spa_old.csv  spa_old_renai_10k.csv  spa_renai_10k.csv
data/6_evaluation/example_model/: line_results.csv  overall_results.json
data/6_evaluation/spa/: line_results.csv  overall_results.json
data/6_evaluation/spa_old/: line_results.csv  overall_results.json
data/6_evaluation/spa_old_renai_10k/: line_results.csv  overall_results.json
data/6_evaluation/spa_renai_10k/: line_results.csv  overall_results.json
data/best_model_test_predictions/: all_text.txt  image_26_prediction.txt  image_27_prediction.txt  image_28_prediction.txt  image_29_prediction.txt  image_30_prediction.txt  image_31_prediction.txt  predictions.csv
models/keras/: example_model.keras  example_model_vocab.csv
models/line_level/tesseract/: renai_10k_line.traineddata
notebooks/: DeepLearn2024_ocr_hackathon.ipynb  compare_eval_results.ipynb
scripts/1_preprocessing/: compile_split_handout_huggingface_data.py  create_dictionary_from_csv.py  create_dictionary_from_txt.py  extract_page_images.py  extract_page_transcriptions.py  make_handout_huggingface_data.py  rename_handout_data.py
scripts/2_bounding_box/Doc-UFCN/: segment_lines_docufcn.py
scripts/3_ocr/tesseract/: copy_data_to_tesstrain.py
scripts/3_ocr/trocr/: train_trocr.py  train_trocr_line-level_trocr-large-english.py  train_trocr_line-level_trocr-large-spanish.py  train_trocr_trocr-large-spanish.py  train_trocr_word-level_trocr-large-english.py  train_trocr_word-level_trocr-large-spanish.py
scripts/3_training/tesseract/: README.md  copy_data_to_tesstrain.py
scripts/4_inference/keras/: example_model.py  inference.py
scripts/4_inference/tesseract/: README.md  inference.py
scripts/4_inference/trocr/: inference.py
scripts/5_postprocessing/: postprocess copy.py  postprocess.py  postprocess_rules.py
scripts/6_evaluation/: evaluate.py
src/deeplearn24/: mlflow_callbacks.py  postprocessing.py  tr_ocr.py  types.py  utils.py
(+1179 files in other folders)
